fix: spacing for heading in a post page

--- a/app/globals.css
+++ b/app/globals.css
@@ -86,8 +86,10 @@
     @apply scroll-m-20 text-xl font-semibold tracking-tight font-serif;
   }
 
-  .post h2 {
-    @apply pt-5 pb-2
+  .post h2,
+  .post h3,
+  .post h4 {
+    @apply pt-6 pb-2;
   }
 }
 
